{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 148,
  "lineage": "5f7f8303-d72f-e72b-c67b-b1cd6cb82ed6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "BastionEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.10",
            "association_id": "eipassoc-06eb4b4b84e50288f",
            "domain": "vpc",
            "id": "eipalloc-023e0183ca11332cb",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07b787f602c6ab62f",
            "private_dns": "ip-10-0-1-10.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-175-41-155-205.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "175.41.155.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.past1",
            "aws_network_interface.BastionInterface",
            "aws_security_group.BastionGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "WebEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.20",
            "association_id": "eipassoc-03366894aae103479",
            "domain": "vpc",
            "id": "eipalloc-04f3b5237eb81c2af",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0969a04b3bb90b85f",
            "private_dns": "ip-10-0-1-20.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-151-226-173.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.226.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.past1",
            "aws_network_interface.WebserverInterface",
            "aws_security_group.WebserverGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:instance/i-0a6e174f47a004840",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6e174f47a004840",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07b787f602c6ab62f"
              }
            ],
            "primary_network_interface_id": "eni-07b787f602c6ab62f",
            "private_dns": "ip-10-0-1-10.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_ip": "175.41.155.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a85b49cfc6819293",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050970ba8e8fb3536",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0717947fa7bd28f57"
            ]
          },
          "dependencies": [
            "aws_network_interface.BastionInterface",
            "aws_security_group.BastionGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:instance/i-0ed8982b3bdafbef3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed8982b3bdafbef3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0969a04b3bb90b85f"
              }
            ],
            "primary_network_interface_id": "eni-0969a04b3bb90b85f",
            "private_dns": "ip-10-0-1-20.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.20",
            "public_ip": "54.151.226.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05237a522f664bfb7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050970ba8e8fb3536",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a556bb515a92ffc"
            ]
          },
          "dependencies": [
            "aws_network_interface.WebserverInterface",
            "aws_security_group.WebserverGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "past1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:internet-gateway/igw-03b0b6e38ff0e39c0",
            "id": "igw-03b0b6e38ff0e39c0",
            "owner_id": "309302904766",
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "BastionInterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07b787f602c6ab62f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:5e:e2:98:bc:26",
            "private_ip": "10.0.1.10",
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0717947fa7bd28f57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050970ba8e8fb3536"
          },
          "dependencies": [
            "aws_security_group.BastionGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "WebserverInterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0969a04b3bb90b85f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:d8:95:89:ab:76",
            "private_ip": "10.0.1.20",
            "private_ips": [
              "10.0.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02a556bb515a92ffc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050970ba8e8fb3536"
          },
          "dependencies": [
            "aws_security_group.WebserverGroup",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "past1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:route-table/rtb-0903c81187eebdc4e",
            "id": "rtb-0903c81187eebdc4e",
            "owner_id": "309302904766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b0b6e38ff0e39c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "past1"
            },
            "tags_all": {
              "Name": "past1"
            },
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.past1",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0309b127bd81e9d63",
            "route_table_id": "rtb-0903c81187eebdc4e",
            "subnet_id": "subnet-050970ba8e8fb3536"
          },
          "dependencies": [
            "aws_internet_gateway.past1",
            "aws_route_table.past1",
            "aws_subnet.public",
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BastionGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:security-group/sg-0717947fa7bd28f57",
            "description": "no",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0717947fa7bd28f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionGroup",
            "name_prefix": "",
            "owner_id": "309302904766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionGroup"
            },
            "tags_all": {
              "Name": "BastionGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebserverGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:security-group/sg-02a556bb515a92ffc",
            "description": "no",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a556bb515a92ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.10/32"
                ],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebserverGroup",
            "name_prefix": "",
            "owner_id": "309302904766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebserverGroup"
            },
            "tags_all": {
              "Name": "WebserverGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:security-group/sg-0e81ec117eb7f49f7",
            "description": "no",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e81ec117eb7f49f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "309302904766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Rds"
            },
            "tags_all": {
              "Name": "Rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:subnet/subnet-03afbfd436559623a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03afbfd436559623a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309302904766",
            "tags": {
              "Name": "privatesubnet"
            },
            "tags_all": {
              "Name": "privatesubnet"
            },
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:subnet/subnet-050970ba8e8fb3536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-050970ba8e8fb3536",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309302904766",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-08ddf2945d7da5efd"
          },
          "dependencies": [
            "aws_vpc.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:309302904766:vpc/vpc-08ddf2945d7da5efd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04232fa01ad45e7b3",
            "default_route_table_id": "rtb-00120301298bde5ab",
            "default_security_group_id": "sg-0601b1d3400116a59",
            "dhcp_options_id": "dopt-4135fa27",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08ddf2945d7da5efd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00120301298bde5ab",
            "owner_id": "309302904766",
            "tags": {
              "Name": "terraformtest"
            },
            "tags_all": {
              "Name": "terraformtest"
            }
          }
        }
      ]
    }
  ]
}